Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- ical import: read the 'synchronize' option from the request
Bug fixes:
~~~~~~~~~~
- Fixed a bug under Plone caused by not "unwrapping" the cotext properly.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- [OPTIM] make use of two new methods: getCurrentUserAttendeeId and
  getMainAttendeeId to check permissions of events without computing the
  Attendee objects.